# ml_project

./: .gitignore  pyproject.toml
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebook/: 1 . EDA STUDENT PERFORMANCE .ipynb
src/components/: data_ingesion.py
